# pytorch-deploy

./: README.md
resnet18/c++/: CMakeLists.txt  main.cpp
resnet18/python/: imagenet_names.txt  train.py
